--- a/lesson7/style.css
+++ b/lesson7/style.css
@@ -2,9 +2,10 @@
     width: 600px;
 }
 
-.templates_card {
+.templates_card, .template_basket {
     display: none;
 }
+
 
 summary {
     background-color: #FFFAFA;
@@ -65,4 +66,14 @@ summary::-webkit-details-marker {
 }
 .comment {
     margin: 10px 20px;
+}
+
+.basket__table {
+    border-collapse: collapse;
+    margin: 10px 10px;
+}
+
+.basket__table td {
+    border: 1px solid black;
+    padding: 10px 5px;
 }
